Added module.exports
Added export default
Added document shim