@@ -1,3 +1,7 @@
 Added module.exports
 Added export default
 Added document shim
+Fixed check to convert ArrayBuffer to Uint8Array
+Modified exportKey to return key_ops
+Modified generateKey to return usages and algorithm name
+Modified importKey to return usages, modulusLength, publicExponent
